# pghatch

./: .gitignore  .justfile  FEATURES.md  LICENSE  LOGGING.md  README.md  debug.py  docker-compose.yaml  model_test.py  pyproject.toml  query_testing.sql  test.sql  test_logging.py
docs/: enhanced_endpoints.md
examples/: enhanced_endpoints_examples.py  parameterized_queries_example.py  query_builder_examples.py
pghatch/: __main__.py  api.py  logging_config.py
pghatch/introspection/: acl.py  introspection.py  pgtypes.py  tables.py
pghatch/query/: select.py
pghatch/query/builder/: README.md  __init__.py  builder.py  expressions.py  functions.py  types.py
pghatch/query_builder/: README.md  __init__.py  builder.py  expressions.py  functions.py  types.py
pghatch/router/: conditions.py  enhanced_table_resolver.py  filter_models.py  filter_parser.py  router.py  watch.py
pghatch/router/resolver/: condition_models.py  condition_modelsv2.py  proc_resolver.py  resolver.py  table_resolver.py
pghatch/utils/: model_registry.py
pgrestcue/introspection/: acl.py  introspection.py  pgtypes.py  tables.py
pgrestcue/router/: router.py
tests/: conftest.py  test_enhanced_endpoints.py
tests/benchmarks/: README.md  __init__.py  conftest.py  core.py  run_benchmark.py  test_benchmarks.py  validate_suite.py
tests/query_builder/: __init__.py  test_query_builder.py  test_query_builder_simple.py
tests/unit/: test_api.py
tests/unit/introspection/: test_introspection.py  test_pgtypes.py
tests/unit/query_builder/: test_query_builder.py  test_query_builder_simple.py
(+2 files in other folders)
